# roflandb

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  merge.sh
.github/ISSUE_TEMPLATE/: -------------.md  helpmealexey.md
CMakeModules/: CodeCoverage.cmake
benchmarks/: CMakeLists.txt  benchmarks.cpp
lib/: CMakeLists.txt  tlib.cpp
lib/inc/: tlib.h
src/: CMakeLists.txt  main.cpp
src/cli/: CMakeLists.txt  cli.cpp  cli_texts.cpp  main.cpp
src/cli/inc/: cli.h  cli_texts.h
src/client/: CMakeLists.txt  main.cpp  texts.cpp
src/client/inc/: texts.h
src/commands/: CMakeLists.txt  SQLStatement.cpp  SQL_Statement.cpp  command.cpp  create_statement.cpp  delete_statement.cpp  drop_statement.cpp  insert_statement.cpp  select_statement.cpp  show_statement.cpp  sql_statement.cpp  storage_engine.cpp  update_statement.cpp
src/commands/inc/: SQLStatement.h  SQL_Statement.h  command.h  create_statement.h  delete_statement.h  drop_statement.h  insert_statement.h  select_statement.h  show_statement.h  sql_statement.h  statements.h  storage_engine.h  update_statement.h
src/inc/: main.h
src/parser/: CMakeLists.txt  createStatement.cpp  create_statement.cpp  driver.cpp  driver.h  lex.yy.cc  location.hh  parser.cc  parser.cpp  parser.h  parser.y  parser.ypp  parser.yy  position.hh  scanner.cc  scanner.h  scanner.ll  sql.l  sql_parser.tab.cpp  sql_parser.tab.hpp  sql_parser.y  sql_parser.ypp  stack.hh  test.l
src/parser/inc/: createStatement.h  create_statement.h  parser.h
src/query_conditions/: CMakeLists.txt  condition.cpp  query_conditions.cpp  row_check.cpp
src/query_conditions/inc/: condition.h  query_conditions.h  row_check.h
src/server/: CMakeLists.txt  main.cpp  server.cpp  table.cpp  table_storage.cpp  tcp_connection.cpp  tcp_server.cpp  texts.cpp
src/server/inc/: server.h  table.h  tcp_connection.h  tcp_server.h  texts.h
src/storage_engine/: CMakeLists.txt  data_block.cpp  shared_table.cpp  storage_engine.cpp  table.cpp  table_cells.cpp  table_chunk.cpp  table_storage.cpp
src/storage_engine/inc/: configuration.h  data.h  data_block.h  i_storage_engine.h  shared_table.h  storage_engine.h  storage_engine_exceptions.h  table.h  table_cells.h  table_chunk.h  table_storage.h
src/table/: CMakeLists.txt  table.cpp  table_cells.cpp
src/table/inc/: configuration.h  table.h  table_cells.h
tests/: CMakeLists.txt  catch.cpp  command_tests.cpp  create_statement_tests.cpp  execute_tests.cpp  functional_tests.cpp  sample_test.cpp  storage_engine_mock.cpp  table_test.cpp  unit_tests.cpp  validator_tests.cpp
tests/functional_tests/: big insert.txt  create existing table.txt  create table after drop.txt  create table duplicate columns.txt  create, insert, select column_names.txt  create, insert, select star.txt  create, insert, select star2.txt  create, insert, select star3.txt  create, insert, update.txt  create, insert, update2.txt  dead update.txt  drop non-existent table.txt  drop table does not drop all tables.txt  drop table.txt  erase table before creation.txt  insert  more than 64k.txt  insert duplicate column.txt  insert incorrect column.txt  insert incorrect number of parameters.txt  insert into.txt  insert update more than 64k2.txt  negative ints.txt  select duplicate columns.txt  select formatting.txt  select incorrect column.txt  select incorrect table.txt  select non-existent column.txt  show create non-existing table.txt  show create table.txt
tests/inc/: storage_engine_mock.h
tests/multithread_tests/: huge create and drop and one small.txt  huge insert and two small queries.txt  huge select and many small queries.txt  huge select and small queries.txt  minimal.txt  one huge and two small queries.txt
